Current Orchees version. Early changes lost :(

--- a/src/pages/devtools/default.html
+++ b/src/pages/devtools/default.html
@@ -107,7 +107,7 @@
       <div id="events">
       </div>
       <div id="resets">
-        <div class="white-panel time-panel open-url" data-url="#quest/island">
+        <div class="white-panel time-panel open-url" data-url="#guild">
           <div id="time-is-assault" class="name horizontal-text"> Strike </div>
           <div id="time-assault-time" class="delta top">17h, 50m</div>
           <div class="bottom">
