--- a/src/pages/options/options.html
+++ b/src/pages/options/options.html
@@ -53,6 +53,8 @@
           <select id="windowTheme">
             <option>Anchira Day</option>
             <option>Tiamat Night</option>
+            <option>Vira</option>
+            <option>Narumaya</option>
           </select>
         </td>
         <td class="quest">
