Handle multiple spark fund

--- a/src/pages/devtools/ui.html
+++ b/src/pages/devtools/ui.html
@@ -458,6 +458,7 @@
                 <div id="spark-planner" class="panel">
                     <span class="panel-header" data-event="collapse">Spark progress</span>
                     <div class="panel-content">
+                        <div>Sparks ready: <span id="spark-ready"></span></div>
                         <div>Days elapsed: <span id="spark-prog-days"></span></div>
                         <div>Crystals left: <span id="spark-prog-crystals"></span></div>
                         <div>Avg crystals/day: <span id="spark-prog-avg"></span></div>
